Update Header to scroll with the page and add a backdrop. Fix the X being behind the menu.

--- a/event/app/components/Header.css
+++ b/event/app/components/Header.css
@@ -58,6 +58,7 @@
         .header-nav {
             display: block;
             align-content: center;
+            height: 100%;
 
             & .header-list {
                 display: none;
@@ -65,6 +66,7 @@
                 background: var(--white);
                 text-align: center;
                 z-index: 120;
+                top: 0;
 
                 .active {
                     border-bottom: none;
@@ -73,8 +75,17 @@
 
             .showmenu {
                 display: inline-table;
-                position: absolute;
-                height: 100vh;
+                position: fixed;
+                top: 0;
+            }
+
+            & .nav-backdrop {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                backdrop-filter: brightness(0.4);
             }
 
             #hamburger {
@@ -82,13 +93,14 @@
                 position: absolute;
                 cursor: pointer;
                 top: 12px;
-                right: 0;
+                right: 12px;
                 width: 3rem;
+                z-index: 121;
             }
-        }
 
-        & .logo {
-            height: 4.4rem;
+            & .logo {
+                height: 4.4rem;
+            }
         }
     }
 }
